challenge date and time picker

--- a/app/src/main/res/layout/users_list_item_row.xml
+++ b/app/src/main/res/layout/users_list_item_row.xml
@@ -10,6 +10,7 @@
         android:id="@+id/user_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,12 +43,12 @@
             tools:text="user@email.com" />
 
         <TextView
-            android:id="@+id/user_stats"
+            android:id="@+id/user_rank"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toEndOf="@+id/user_image"
             app:layout_constraintTop_toBottomOf="@+id/guideline"
-            tools:text="W: 10 / L: 3 | Ratio: 3.33" />
+            tools:text="General rank: 3" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
