--- a/app/src/main/res/layout/ranking_fragment.xml
+++ b/app/src/main/res/layout/ranking_fragment.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/challenges_list"
+        android:id="@+id/users_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
