--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,31 +1,46 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path
-        android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0"/>
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0"/>
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000"/>
+    android:viewportWidth="1113.0457"
+    android:viewportHeight="1113.0457">
+    <group android:translateX="300.52234"
+        android:translateY="300.52234">
+        <path
+            android:pathData="M454.139,57.377C417.448,20.688 368.19,0.48 315.441,0.48c-59.556,0 -117.233,24.877 -162.402,70.047c-21.75,21.749 -37.956,47.309 -48.168,75.967l-0.465,1.304c-1.264,3.541 -0.374,7.495 2.286,10.156l246.752,246.754c1.859,1.858 4.348,2.851 6.887,2.851c1.087,0 2.183,-0.182 3.245,-0.556l1.308,-0.463c11.048,-3.913 21.824,-8.812 32.027,-14.559c0.065,-0.036 0.129,-0.074 0.193,-0.113l5.516,-3.275c3.554,-2.111 5.388,-6.234 4.574,-10.287l-0.304,-1.519c-0.642,-3.199 -0.966,-6.467 -0.966,-9.715c0,-27.179 22.112,-49.291 49.291,-49.291c3.179,0 6.391,0.315 9.55,0.938l1.476,0.29c3.951,0.787 7.975,-0.957 10.12,-4.366l0.801,-1.272C531.007,227.869 521.754,124.993 454.139,57.377z"
+            android:fillColor="#F04C35"/>
+        <path
+            android:pathData="M451.14,311.281c-30.968,0 -56.16,25.192 -56.16,56.16c0,30.965 25.192,56.16 56.16,56.16c30.965,0 56.16,-25.194 56.16,-56.16C507.301,336.473 482.105,311.281 451.14,311.281z"
+            android:fillColor="#F8981D"/>
+        <path
+            android:pathData="M412.29,367.441c0,-28.024 20.632,-51.317 47.505,-55.492c-2.823,-0.437 -5.712,-0.668 -8.655,-0.668c-30.968,0 -56.16,25.192 -56.16,56.16c0,30.965 25.192,56.16 56.16,56.16c2.943,0 5.833,-0.23 8.655,-0.67C432.922,418.758 412.29,395.464 412.29,367.441z"
+            android:strokeAlpha="0.19"
+            android:fillColor="#202121"
+            android:fillAlpha="0.19"/>
+        <path
+            android:pathData="M104.298,147.793l-5.09,20.406c-12.254,49.123 -5.479,100.722 19.073,145.291l7.642,13.87l29.102,-29.101c1.567,-1.566 3.613,-2.394 5.916,-2.394c2.54,0 4.968,1.029 6.837,2.897l44.973,44.973c1.798,1.798 2.826,4.137 2.895,6.585c0.067,2.405 -0.76,4.539 -2.39,6.168l-29.099,29.1l13.893,7.637c29.587,16.256 63.065,24.848 96.815,24.848c16.269,0 32.521,-1.982 48.302,-5.889l20.452,-5.068L104.298,147.793z"
+            android:fillColor="#3E5360"/>
+        <path
+            android:pathData="M343.166,412.183c-38.945,8.54 -97.982,-4.268 -145.771,-39.834l-13.237,13.238l13.893,7.637c29.587,16.256 63.065,24.848 96.815,24.848C311.134,418.073 327.385,416.091 343.166,412.183z"
+            android:strokeAlpha="0.19"
+            android:fillColor="#202121"
+            android:fillAlpha="0.19"/>
+        <path
+            android:pathData="M125.922,327.361l16.774,-16.772c-16.255,-29.172 -25.717,-64.622 -24.008,-106.571c5.72,-140.305 136.57,-191.37 167.608,-201.531c-49.019,6.726 -95.507,30.289 -133.257,68.04c-21.75,21.749 -37.956,47.309 -48.168,75.966l-0.465,1.304c-0.01,0.025 -0.013,0.055 -0.023,0.08l-0.084,-0.084l-5.09,20.406c-12.254,49.123 -5.479,100.722 19.073,145.291L125.922,327.361z"
+            android:strokeAlpha="0.19"
+            android:fillColor="#202121"
+            android:fillAlpha="0.19"/>
+        <path
+            android:pathData="M218.106,338.38l-44.974,-44.973c-3.251,-3.252 -7.695,-5.116 -12.191,-5.116c-4.296,0 -8.3,1.64 -11.268,4.613L4.937,437.64c-6.589,6.605 -6.582,17.346 0.016,23.948l44.973,44.971c3.2,3.199 7.457,4.962 11.984,4.962s8.782,-1.76 11.981,-4.96l144.71,-144.712c3.1,-3.093 4.739,-7.265 4.613,-11.734C223.095,345.72 221.279,341.55 218.106,338.38z"
+            android:fillColor="#485D6D"/>
+        <path
+            android:pathData="M69.081,503.409l-10.768,-10.766c-0.331,-0.27 -0.651,-0.558 -0.957,-0.864l-33.211,-33.209c-4.872,-4.875 -4.877,-12.808 -0.012,-17.687l5.635,-5.634l140.886,-143.89c-2.867,-1.967 -6.272,-3.066 -9.712,-3.066c-4.296,0 -8.3,1.64 -11.268,4.613L4.937,437.64c-6.589,6.605 -6.582,17.346 0.016,23.948l44.973,44.971c3.2,3.199 7.457,4.962 11.984,4.962s8.782,-1.76 11.981,-4.96l0.12,-0.12C72.176,505.837 70.488,504.815 69.081,503.409z"
+            android:strokeAlpha="0.19"
+            android:fillColor="#202121"
+            android:fillAlpha="0.19"/>
+        <path
+            android:pathData="M70.093,478.875c-2.077,0 -4.155,-0.792 -5.738,-2.375l-23.791,-23.791c-3.169,-3.168 -3.169,-8.307 0,-11.474c3.169,-3.17 8.307,-3.17 11.475,-0.002l23.791,23.791c3.169,3.168 3.17,8.307 0,11.474C74.246,478.082 72.169,478.875 70.093,478.875z"
+            android:strokeAlpha="0.19"
+            android:fillColor="#202121"
+            android:fillAlpha="0.19"/>
+    </group>
 </vector>
