--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#8C9EFF</color>
     <color name="red">#B71C1C</color>
     <color name="green">#1B5E20</color>
+    <color name="victory_background_color">#E8F5E9</color>
+    <color name="defeat_background_color">#FFEBEE</color>
 </resources>
