--- a/app/src/main/res/drawable/ic_up_arrow.xml
+++ b/app/src/main/res/drawable/ic_up_arrow.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="490.659dp"
-    android:height="490.659dp"
-    android:viewportWidth="490.659"
-    android:viewportHeight="490.659">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M489.229,442.468L254.563,37.135c-3.797,-6.592 -14.677,-6.592 -18.453,0L1.443,442.468c-1.92,3.307 -1.92,7.36 -0.021,10.667c1.92,3.307 5.44,5.333 9.259,5.333h469.333c3.819,0 7.339,-2.027 9.259,-5.333C491.128,449.849 491.128,445.775 489.229,442.468z" />
+    android:width="213.333dp"
+    android:height="213.333dp"
+    android:viewportWidth="213.333"
+    android:viewportHeight="213.333">
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M106.667,53.333l-106.667,106.667l213.333,0z"/>
 </vector>
