--- a/app/src/main/res/layout/difficulty_bar.xml
+++ b/app/src/main/res/layout/difficulty_bar.xml
@@ -196,7 +196,7 @@
         android:layout_width="0dp"
         android:layout_height="15dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_up_arrow_2"
+        android:src="@drawable/ic_up_arrow"
         app:layout_constraintEnd_toEndOf="@+id/selector"
         app:layout_constraintStart_toStartOf="@+id/selector"
         app:layout_constraintTop_toBottomOf="@+id/selector" />
