--- a/app/src/main/res/layout/difficulty_bar.xml
+++ b/app/src/main/res/layout/difficulty_bar.xml
@@ -1,8 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/win_chances_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/winning_chances"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/low"
+        android:textColor="@color/chances_0_5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/high"
+        android:textColor="@color/chances_95_100"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -181,24 +208,35 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.34" />
 
     <View
         android:id="@+id/selector"
         android:layout_width="25dp"
         android:layout_height="15dp"
+        android:layout_marginTop="2dp"
         android:background="@drawable/rectangle"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
         app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/win_chances_title" />
 
     <ImageView
+        android:id="@+id/imageView2"
         android:layout_width="0dp"
-        android:layout_height="15dp"
-        android:scaleType="centerCrop"
+        android:layout_height="10dp"
         android:src="@drawable/ic_up_arrow"
         app:layout_constraintEnd_toEndOf="@+id/selector"
         app:layout_constraintStart_toStartOf="@+id/selector"
         app:layout_constraintTop_toBottomOf="@+id/selector" />
+
+    <TextView
+        android:id="@+id/win_chances_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/guideline"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        tools:text="Low: 34%" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
