--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,6 +34,12 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="ui_textview_normal_black">
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
     <style name="ui_textview_normal_regular_black">
         <item name="android:fontFamily">sans-serif-light</item>
         <item name="android:textSize">14sp</item>
