--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,12 @@
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="ui_textview_small_regular_black">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
+
     <style name="FabStyle">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
