--- a/app/src/main/res/layout/matches_list_fragment.xml
+++ b/app/src/main/res/layout/matches_list_fragment.xml
@@ -15,7 +15,7 @@
             android:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/challenges_list"
+            android:id="@+id/matches_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
