--- a/app/src/main/res/layout/past_match_item_row.xml
+++ b/app/src/main/res/layout/past_match_item_row.xml
@@ -26,16 +26,24 @@
         app:layout_constraintStart_toStartOf="@+id/local_image"
         app:layout_constraintTop_toBottomOf="@+id/local_image" />
 
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/main_container"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/visitor_image"
-        app:layout_constraintTop_toTopOf="@+id/visitor_image"
-        tools:text="User name" />
+        app:layout_constraintStart_toEndOf="@+id/local_image"
+        app:layout_constraintTop_toTopOf="@+id/local_image">
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            tools:text="User name" />
+    </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
