--- a/app/src/main/res/layout/upcoming_match_item_row.xml
+++ b/app/src/main/res/layout/upcoming_match_item_row.xml
@@ -27,6 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/local_image" />
 
     <LinearLayout
+        android:id="@+id/main_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="2dp"
@@ -49,7 +50,6 @@
             android:id="@+id/matches_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
             android:orientation="horizontal" />
     </LinearLayout>
 
