--- a/app/src/main/res/layout/challenge_edit_dialog.xml
+++ b/app/src/main/res/layout/challenge_edit_dialog.xml
@@ -49,21 +49,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/local" />
 
-    <EditText
-        android:id="@+id/local_score"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:background="@color/edit_background_color"
-        android:digits="1234567890"
-        android:gravity="center"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="@+id/local_image"
         app:layout_constraintStart_toEndOf="@+id/local_image"
-        app:layout_constraintTop_toTopOf="@+id/local_image"
-        tools:text="15" />
+        app:layout_constraintTop_toTopOf="@+id/local_image">
+
+        <EditText
+            android:id="@+id/local_score"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/edit_background_color"
+            android:digits="1234567890"
+            android:gravity="center"
+            android:inputType="number"
+            android:maxLength="2"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="15" />
+
+        <TextView
+            android:id="@+id/old_local_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@+id/local_score"
+            app:layout_constraintStart_toStartOf="@+id/local_score"
+            app:layout_constraintTop_toBottomOf="@+id/local_score"
+            tools:text="14" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/textView2"
@@ -86,21 +103,38 @@
         app:layout_constraintStart_toEndOf="@+id/local_image"
         app:layout_constraintTop_toTopOf="@+id/visitor_image" />
 
-    <EditText
-        android:id="@+id/visitor_score"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:background="@color/edit_background_color"
-        android:digits="1234567890"
-        android:gravity="center"
-        android:inputType="number"
-        android:maxLength="2"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/local_image"
+        app:layout_constraintBottom_toBottomOf="@+id/visitor_image"
         app:layout_constraintEnd_toStartOf="@+id/visitor_image"
-        app:layout_constraintTop_toTopOf="@+id/local_image"
-        tools:text="4" />
+        app:layout_constraintTop_toTopOf="@+id/visitor_image">
+
+        <EditText
+            android:id="@+id/visitor_score"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@color/edit_background_color"
+            android:digits="1234567890"
+            android:gravity="center"
+            android:inputType="number"
+            android:maxLength="2"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="4" />
+
+        <TextView
+            android:id="@+id/old_visitor_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@+id/visitor_score"
+            app:layout_constraintStart_toStartOf="@+id/visitor_score"
+            app:layout_constraintTop_toBottomOf="@+id/visitor_score"
+            tools:text="8" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
         android:id="@+id/match_date"
