--- a/app/src/main/res/layout/empty_list_layout.xml
+++ b/app/src/main/res/layout/empty_list_layout.xml
@@ -15,9 +15,11 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
+        android:id="@+id/message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:gravity="center"
         android:text="@string/no_matches_yet"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
