--- a/app/src/main/res/layout/challenge_edit_dialog.xml
+++ b/app/src/main/res/layout/challenge_edit_dialog.xml
@@ -64,6 +64,7 @@
             android:background="@color/edit_background_color"
             android:digits="1234567890"
             android:gravity="center"
+            android:hint="0"
             android:inputType="number"
             android:maxLength="2"
             android:textSize="30sp"
@@ -118,6 +119,7 @@
             android:background="@color/edit_background_color"
             android:digits="1234567890"
             android:gravity="center"
+            android:hint="0"
             android:inputType="number"
             android:maxLength="2"
             android:textSize="30sp"
